--- a/python/10_pandas/python_for_datascience_handbook/7. Example - US States Data.ipynb
+++ b/python/10_pandas/python_for_datascience_handbook/7. Example - US States Data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4           AL  under18  2011   1125763.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4  California         163707"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "4  California           CA"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "4           AL  under18  2011   1125763.0  Alabama"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "2467           PR  under18  1999         NaN   NaN"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
        "array(['PR', 'USA'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "4           AL  under18  2011   1125763.0  Alabama        52423.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,6 +817,192 @@
    "source": [
     "# let’s check for nulls to see if there were any mismatches\n",
     "final.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['United States'], dtype=object)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final['state'][final['area (sq. mi)'].isnull()].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state/region</th>\n",
+       "      <th>ages</th>\n",
+       "      <th>year</th>\n",
+       "      <th>population</th>\n",
+       "      <th>state</th>\n",
+       "      <th>area (sq. mi)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>under18</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>1117489.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>52423.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>total</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>4817528.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>52423.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>under18</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1130966.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>52423.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>total</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>4785570.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>52423.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>under18</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1125763.0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>52423.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  state/region     ages  year  population    state  area (sq. mi)\n",
+       "0           AL  under18  2012   1117489.0  Alabama        52423.0\n",
+       "1           AL    total  2012   4817528.0  Alabama        52423.0\n",
+       "2           AL  under18  2010   1130966.0  Alabama        52423.0\n",
+       "3           AL    total  2010   4785570.0  Alabama        52423.0\n",
+       "4           AL  under18  2011   1125763.0  Alabama        52423.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We see that our areas DataFrame does not contain the area of the United States as a whole.\n",
+    "# we’ll just drop the null values because the population density of the entire United States is not relevant to our current discussion.\n",
+    "final.dropna(inplace=True)\n",
+    "final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "District of Columbia    8898.897059\n",
+       "Puerto Rico             1058.665149\n",
+       "New Jersey              1009.253268\n",
+       "Rhode Island             681.339159\n",
+       "Connecticut              645.600649\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now we have all the data we need. To answer the question of interest, let’s first select the portion of the data corresponding with the year 2000, and the total population.\n",
+    "# We’ll use the query() function to do this quickly.\n",
+    "data2010 = final.query('year == 2010 & ages == \"total\"')\n",
+    "# Now let’s compute the population density and display it in order.\n",
+    "# We’ll start by reindexing our data on the state, and then compute the result.\n",
+    "data2010.set_index('state', inplace=True)\n",
+    "density = data2010['population'] / data2010['area (sq. mi)']\n",
+    "density.sort_values(ascending = False, inplace = True)\n",
+    "density.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "South Dakota    10.583512\n",
+       "North Dakota     9.537565\n",
+       "Montana          6.736171\n",
+       "Wyoming          5.768079\n",
+       "Alaska           1.087509\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can also check the end of the list:\n",
+    "density.tail()"
    ]
   },
   {
