12. Working with Time Series.ipynb file added

--- a/python/10_pandas/python_for_datascience_handbook/12. Working with Time Series.ipynb
+++ b/python/10_pandas/python_for_datascience_handbook/12. Working with Time Series.ipynb
@@ -7,13 +7,13 @@
     "### Dates and Times in Python\n",
     "The Python world has a number of available representations of dates, times, deltas,\n",
     "and timespans.\n",
-    "While the time series tools provided by Pandas tend to be the most useful for data science applications, it is helpful to see their relationship to other\n",
-    "packages used in Python."
+    "\n",
+    "While the time series tools provided by Pandas tend to be the most useful for data science applications, it is helpful to see their relationship to other packages used in Python."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,144 @@
    "metadata": {},
    "source": [
     "### Native Python dates and times: datetime and dateutil\n",
-    "Python’s basic objects for working with dates and times reside in the built-in date\n",
-    "time module. Along with the third-party dateutil module, you can use it to quickly\n",
-    "perform a host of useful functionalities on dates and times. For example, you can\n",
-    "manually build a date using the datetime type:"
+    "Python’s basic objects for working with dates and times reside in the built-in date time module.\n",
+    "\n",
+    "Along with the third-party dateutil module, you can use it to quickly perform a host of useful functionalities on dates and times.\n",
+    "\n",
+    "For example, you can manually build a date using the datetime type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2018, 5, 17, 0, 0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "datetime(year = 2018, month = 5, day = 17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1994, 5, 4, 0, 0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dateutil import parser\n",
+    "date = parser.parse(\"4th of May, 1994\")\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you have a datetime object, you can do things like printing the day of the week:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date.strftime('%A')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Typed arrays of times: NumPy’s datetime64 \n",
+    "\n",
+    "The weaknesses of Python’s datetime format inspired the NumPy team to add a set of native time series data type to NumPy.\n",
+    "\n",
+    "The datetime64 dtype encodes dates as 64-bit integers, and thus allows arrays of dates to be represented very compactly.\n",
+    "\n",
+    "The datetime64 requires a very specific input format:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('2017-04-04', dtype='datetime64[D]')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = np.array(\"2017-04-04\", dtype = np.datetime64)\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have this date formatted, however, we can quickly do vectorized operations on it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2017-04-04', '2017-04-05', '2017-04-06', '2017-04-07',\n",
+       "       '2017-04-08', '2017-04-09', '2017-04-10', '2017-04-11',\n",
+       "       '2017-04-12', '2017-04-13'], dtype='datetime64[D]')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date + np.arange(10)"
    ]
   },
   {
@@ -56,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
