12. Working with Time Series.ipynb - modified

--- a/python/10_pandas/python_for_datascience_handbook/12. Working with Time Series.ipynb
+++ b/python/10_pandas/python_for_datascience_handbook/12. Working with Time Series.ipynb
@@ -400,11 +400,194 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "• The most fundamental of these date/time objects are the Timestamp and DatetimeIndex objects.\n",
+    "\n",
+    "• While these class objects can be invoked directly, it is more common to use the pd.to_datetime() function, which can parse a wide variety of formats.\n",
+    "\n",
+    "• Passing a single date to pd.to_datetime() yields a Timestamp ; passing a series of dates by default yields a DatetimeIndex:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2017-05-10', '2020-08-05', '2015-01-19', '2019-02-03',\n",
+       "               '2019-03-03'],\n",
+       "              dtype='datetime64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = pd.to_datetime(['2017, 5, 10', '5th of Aug, 2020', '2015-Jan-19', '02-03-2019', '20190303'])\n",
+    "dates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• Any DatetimeIndex can be converted to a PeriodIndex with the to_period() function with the addition of a frequency code; here we’ll use 'D' to indicate daily frequency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PeriodIndex(['2017-05', '2020-08', '2015-01', '2019-02', '2019-03'], dtype='period[M]', freq='M')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates.to_period('M')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• A TimedeltaIndex is created, for example, when one date is subtracted from another:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TimedeltaIndex(['0 days', '1183 days', '-842 days', '634 days', '662 days'], dtype='timedelta64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates - dates[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regular sequences: pd.date_range()\n",
+    "\n",
+    "• To make the creation of regular date sequences more convenient, Pandas offers a few functions for this purpose: pd.date_range() for timestamps, pd.period_range() for periods, and pd.timedelta_range() for time deltas.\n",
+    "\n",
+    "• We’ve seen that Python’s range() and NumPy’s np.arange() turn a startpoint, endpoint, and optional stepsize into a sequence.\n",
+    "\n",
+    "• Similarly, pd.date_range() accepts a start date, an end date, and an optional frequency code to create a regular sequence of dates.\n",
+    "\n",
+    "• By default, the frequency is one day:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2100-01-01', '2100-01-02', '2100-01-03', '2100-01-04',\n",
+       "               '2100-01-05', '2100-01-06', '2100-01-07', '2100-01-08',\n",
+       "               '2100-01-09', '2100-01-10', '2100-01-11', '2100-01-12',\n",
+       "               '2100-01-13', '2100-01-14', '2100-01-15', '2100-01-16',\n",
+       "               '2100-01-17', '2100-01-18', '2100-01-19', '2100-01-20'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range('01-01-2100', '20-01-2100')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• Alternatively, the date range can be specified not with a start- and endpoint, but with a startpoint and a number of periods:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2019-01-01', '2019-01-02', '2019-01-03', '2019-01-04',\n",
+       "               '2019-01-05', '2019-01-06', '2019-01-07', '2019-01-08',\n",
+       "               '2019-01-09', '2019-01-10'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range('01-01-2019', periods = 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• You can modify the spacing by altering the freq argument, which defaults to D.\n",
+    "\n",
+    "• For example, here we will construct a range of hourly timestamps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2018-12-31', '2019-12-31', '2020-12-31', '2021-12-31',\n",
+       "               '2022-12-31', '2023-12-31', '2024-12-31', '2025-12-31',\n",
+       "               '2026-12-31', '2027-12-31'],\n",
+       "              dtype='datetime64[ns]', freq='A-DEC')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range('20-03-2018', periods = 10, freq = 'Y')"
+   ]
   }
  ],
  "metadata": {
